--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticleDetailPage.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticleDetailPage.xaml
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage
+<views:PageBase
     x:Class="WeeklyXamarin.Mobile.Views.ArticleDetailPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:views="clr-namespace:WeeklyXamarin.Mobile.Views"
+    xmlns:viewmodels="clr-namespace:WeeklyXamarin.Core.ViewModels;assembly=WeeklyXamarin.Core"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:TypeArguments="viewmodels:ArticleDetailViewModel"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="{Binding Title}"
@@ -38,4 +41,4 @@
     </Grid>
 
 
-</ContentPage>
+</views:PageBase>
