--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/EditionsPage.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/EditionsPage.xaml
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage
+<views:PageBase
     x:Class="WeeklyXamarin.Mobile.Views.EditionsPage"
+     xmlns:views="clr-namespace:WeeklyXamarin.Mobile.Views"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodels="clr-namespace:WeeklyXamarin.Core.ViewModels;assembly=WeeklyXamarin.Core"
+    x:TypeArguments="viewmodels:EditionsViewModel"
     x:Name="rootPage"
     Title="{Binding Title}"
     mc:Ignorable="d">
@@ -48,10 +51,10 @@
                                 Text="{Binding Summary}" />
 
                             <Grid.GestureRecognizers>
-                                <TapGestureRecognizer 
-                                    Command="{Binding BindingContext.OpenEditionCommand, Source={x:Reference rootPage}}" NumberOfTapsRequired="1" 
+                                <TapGestureRecognizer
+                                    Command="{Binding BindingContext.OpenEditionCommand, Source={x:Reference rootPage}}"
                                     CommandParameter="{Binding .}"
-                                    />
+                                    NumberOfTapsRequired="1" />
                             </Grid.GestureRecognizers>
                         </Grid>
                     </ContentView>
@@ -59,4 +62,4 @@
             </CollectionView.ItemTemplate>
         </CollectionView>
     </RefreshView>
-</ContentPage>
+</views:PageBase>
