--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticleDetailPage.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticleDetailPage.xaml
@@ -2,42 +2,61 @@
 <views:PageBase
     x:Class="WeeklyXamarin.Mobile.Views.ArticleDetailPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:views="clr-namespace:WeeklyXamarin.Mobile.Views"
-    xmlns:viewmodels="clr-namespace:WeeklyXamarin.Core.ViewModels;assembly=WeeklyXamarin.Core"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:TypeArguments="viewmodels:ArticleDetailViewModel"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodels="clr-namespace:WeeklyXamarin.Core.ViewModels;assembly=WeeklyXamarin.Core"
+    xmlns:views="clr-namespace:WeeklyXamarin.Mobile.Views"
     Title="{Binding Title}"
+    x:TypeArguments="viewmodels:ArticleDetailViewModel"
+    Shell.PresentationMode="ModalAnimated"
     mc:Ignorable="d">
 
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
+    <Grid RowDefinitions="Auto, *" RowSpacing="0">
 
-        <StackLayout Grid.Row="0" Margin="20">
-            <Label
-                Margin="0,10,0,0"
-                FontAttributes="Bold"
-                FontSize="16"
-                Text="{Binding Article.Title}" />
-            <Label
-                FontSize="16"
-                Text="{Binding Article.Author}"
-                TextColor="#80BFEB" />
-        </StackLayout>
+        <Grid RowDefinitions="30, Auto" RowSpacing="0">
 
-        <!-- stick a lottie animation here -->
-        
-        <WebView
-            Grid.Row="1"
-            BackgroundColor="Yellow"
-            HorizontalOptions="Fill"
-            Source="{Binding Article.Url}"
-            VerticalOptions="Fill" />
+            <!--  probably refactor this into a navigation bar component  -->
+            <Button
+                Padding="0"
+                BackgroundColor="Transparent"
+                Command="{Binding CloseViewCommand}"
+                HorizontalOptions="Start"
+                Text="&lt; Back"
+                VerticalOptions="Start" />
+
+            <Button
+                Padding="0"
+                BackgroundColor="Transparent"
+                HorizontalOptions="End"
+                Text="⭐️"
+                VerticalOptions="Start" />
+
+
+            <StackLayout Grid.Row="1" Margin="20,0,20,20">
+                <Label
+                    Margin="0,10,0,0"
+                    FontAttributes="Bold"
+                    FontSize="16"
+                    Text="{Binding Article.Title}" />
+                <Label
+                    FontSize="16"
+                    Text="{Binding Article.Author}"
+                    TextColor="#80BFEB" />
+            </StackLayout>
+        </Grid>
+        <!--  stick a lottie animation here  -->
+
+        <ScrollView Grid.Row="1" Scrolled="ScrollView_Scrolled">
+            <WebView
+                BackgroundColor="Yellow"
+                x:Name="TheWebView"
+                HorizontalOptions="Fill"
+                InputTransparent="true"
+                Source="{Binding Article.Url}"
+                VerticalOptions="Fill" />
+        </ScrollView>
     </Grid>
 
 
