--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticleDetailPage.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticleDetailPage.xaml
@@ -12,12 +12,7 @@
     mc:Ignorable="d">
 
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-
+    <Grid RowDefinitions="Auto, *">
         <StackLayout Grid.Row="0" Margin="20">
             <Label
                 Margin="0,10,0,0"
