--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticlesListPage.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticlesListPage.xaml
@@ -1,17 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <views:PageBase
-    xmlns:viewmodels="clr-namespace:WeeklyXamarin.Core.ViewModels;assembly=WeeklyXamarin.Core"
-    xmlns:views="clr-namespace:WeeklyXamarin.Mobile.Views"
-    x:TypeArguments="viewmodels:ArticlesListViewModel"
     x:Class="WeeklyXamarin.Mobile.Views.ArticlesListPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="clr-namespace:WeeklyXamarin.Core.Models;assembly=WeeklyXamarin.Core"
+    xmlns:rv="clr-namespace:Sharpnado.MaterialFrame;assembly=Sharpnado.MaterialFrame"
+    xmlns:viewmodels="clr-namespace:WeeklyXamarin.Core.ViewModels;assembly=WeeklyXamarin.Core"
+    xmlns:views="clr-namespace:WeeklyXamarin.Mobile.Views"
     x:Name="rootPage"
     Title="{Binding EditionId, StringFormat='Edition {0}'}"
     x:DataType="viewmodels:ArticlesListViewModel"
+    x:TypeArguments="viewmodels:ArticlesListViewModel"
     BackgroundColor="#F4F2F5"
     mc:Ignorable="d">
 
@@ -25,65 +26,77 @@
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="models:Article">
                     <ContentView>
-                        <Grid
+                        <rv:MaterialFrame
                             Margin="20"
-                            BackgroundColor="White"
-                            ColumnSpacing="20"
-                            RowSpacing="10"
-                            RowDefinitions="Auto, Auto, Auto, Auto"
-                            ColumnDefinitions="4, *">
-                            <BoxView
-                                Grid.Row="0"
-                                Grid.RowSpan="4"
-                                Grid.Column="0"
-                                BackgroundColor="#80BFEB"
-                                HorizontalOptions="Start"
-                                WidthRequest="4" />
+                            Padding="0"
+                            CornerRadius="4"
+                            HasShadow="True"
+                            IsClippedToBounds="True"
+                            MaterialTheme="Acrylic">
+                            <Grid
+                                ColumnDefinitions="4, *"
+                                ColumnSpacing="20"
+                                RowDefinitions="Auto, Auto, Auto, Auto"
+                                RowSpacing="10">
+                                <BoxView
+                                    Grid.Row="0"
+                                    Grid.RowSpan="4"
+                                    Grid.Column="0"
+                                    BackgroundColor="#80BFEB"
+                                    CornerRadius="4,0,4,0"
+                                    HorizontalOptions="Start"
+                                    WidthRequest="4" />
 
-                            <Label
-                                Grid.Row="0"
-                                Grid.Column="1"
-                                Margin="0,10,0,0"
-                                FontAttributes="Bold"
-                                FontSize="16"
-                                Text="{Binding Title}" />
+                                <Label
+                                    Grid.Row="0"
+                                    Grid.Column="1"
+                                    Margin="0,10,0,0"
+                                    FontAttributes="Bold"
+                                    FontSize="16"
+                                    Text="{Binding Title}" />
 
-                            <Label
-                                Grid.Row="1"
-                                Grid.Column="1"
-                                FontSize="16"
-                                Text="{Binding Author}"
-                                TextColor="#80BFEB" />
+                                <Label
+                                    Grid.Row="1"
+                                    Grid.Column="1"
+                                    FontSize="16"
+                                    Text="{Binding Author}"
+                                    TextColor="#80BFEB" />
 
-                            <Label
-                                Grid.Row="2"
-                                Grid.Column="1"
-                                FontSize="14"
-                                Text="{Binding Description}" />
-
-                            <Frame
-                                Grid.Row="3"
-                                Grid.Column="1"
-                                Margin="0,0,10,10"
-                                Padding="10,3"
-                                BackgroundColor="#EC4327"
-                                CornerRadius="6"
-                                HeightRequest="20"
-                                HorizontalOptions="End"
-                                VerticalOptions="End">
-                                <Label Text="{Binding Category}" TextColor="White" />
-                            </Frame>
+                                <Label
+                                    Grid.Row="2"
+                                    Grid.Column="1"
+                                    FontSize="14"
+                                    Text="{Binding Description}" />
 
 
+                                <rv:MaterialFrame
+                                    Grid.Row="3"
+                                    Grid.Column="1"
+                                    Margin="0,0,10,10"
+                                    Padding="10,3"
+                                    CornerRadius="6"
+                                    HeightRequest="20"
+                                    HorizontalOptions="End"
+                                    LightThemeBackgroundColor="#EC4327"
+                                    MaterialTheme="Acrylic"
+                                    VerticalOptions="End">
+                                    <Label
+                                        BackgroundColor="#EC4327"
+                                        Text="{Binding Category}"
+                                        TextColor="White" />
+                                </rv:MaterialFrame>
 
-                            <Grid.GestureRecognizers>
-                                <TapGestureRecognizer
-                                    Command="{Binding BindingContext.OpenArticleCommand, Source={x:Reference rootPage}}"
-                                    CommandParameter="{Binding .}"
-                                    NumberOfTapsRequired="1" />
 
-                            </Grid.GestureRecognizers>
-                        </Grid>
+
+                                <Grid.GestureRecognizers>
+                                    <TapGestureRecognizer
+                                        Command="{Binding BindingContext.OpenArticleCommand, Source={x:Reference rootPage}}"
+                                        CommandParameter="{Binding .}"
+                                        NumberOfTapsRequired="1" />
+
+                                </Grid.GestureRecognizers>
+                            </Grid>
+                        </rv:MaterialFrame>
                     </ContentView>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
