--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/AboutPage.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/AboutPage.xaml
@@ -1,95 +1,109 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<views:PageBase
+﻿<views:PageBase
     x:Class="WeeklyXamarin.Mobile.Views.AboutPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:rv="clr-namespace:Sharpnado.MaterialFrame;assembly=Sharpnado.MaterialFrame"
     xmlns:viewmodels="clr-namespace:WeeklyXamarin.Core.ViewModels;assembly=WeeklyXamarin.Core"
     xmlns:views="clr-namespace:WeeklyXamarin.Mobile.Views"
     xmlns:vm="clr-namespace:WeeklyXamarin.Core.ViewModels;assembly=WeeklyXamarin.Core"
     Title="{Binding Title}"
     x:TypeArguments="viewmodels:AboutViewModel"
+    BackgroundColor="#F4F2F5"
     mc:Ignorable="d">
 
-
     <ContentPage.Resources>
+
         <ResourceDictionary>
-            <Color x:Key="Primary">#2196F3</Color>
-            <Color x:Key="Accent">#96d1ff</Color>
-            <Color x:Key="LightTextColor">#999999</Color>
+
+            <Style x:Key="Header" TargetType="Label">
+                <Setter Property="FontSize" Value="14" />
+                <Setter Property="FontAttributes" Value="Bold" />
+            </Style>
+
         </ResourceDictionary>
     </ContentPage.Resources>
 
-    <Grid RowDefinitions="Auto, *">
-        <StackLayout
-            BackgroundColor="{StaticResource Accent}"
-            HorizontalOptions="Fill"
-            VerticalOptions="FillAndExpand">
-            <StackLayout
-                HorizontalOptions="Center"
-                Orientation="Horizontal"
-                VerticalOptions="Center">
-                <ContentView Padding="0,40,0,40" VerticalOptions="FillAndExpand">
-                    <Image
-                        HeightRequest="64"
-                        Source="xamarin_logo.png"
-                        VerticalOptions="Center" />
-                </ContentView>
-            </StackLayout>
+    <ScrollView>
+        <StackLayout Padding="20">
+
+            <Label Style="{StaticResource Header}" Text="Preferences" />
+            <rv:MaterialFrame
+                Padding="20"
+                CornerRadius="4"
+                HasShadow="True"
+                IsClippedToBounds="True"
+                MaterialTheme="Acrylic">
+
+                <StackLayout Spacing="20">
+                    <Grid ColumnDefinitions="*,*">
+                        <Label Text="Open Links in App" VerticalOptions="Center" />
+                        <Switch
+                            Grid.Column="1"
+                            HorizontalOptions="End"
+                            IsToggled="{Binding OpenLinksInApp}" />
+                    </Grid>
+                </StackLayout>
+            </rv:MaterialFrame>
+            <Label
+                Margin="0,20,0,0"
+                Style="{StaticResource Header}"
+                Text="Contributors" />
+            <rv:MaterialFrame
+                Padding="20"
+                CornerRadius="4"
+                HasShadow="True"
+                IsClippedToBounds="True"
+                MaterialTheme="Acrylic">
+                <StackLayout BindableLayout.ItemsSource="{Binding Acknowledgements}" Spacing="20">
+                    <BindableLayout.ItemTemplate>
+                        <DataTemplate>
+                            <Grid ColumnDefinitions="*,*">
+                                <Label FontAttributes="Bold" Text="{Binding Person}" />
+                                <Label
+                                    Grid.Column="1"
+                                    HorizontalOptions="End"
+                                    Text="{Binding Activity}" />
+                            </Grid>
+                        </DataTemplate>
+                    </BindableLayout.ItemTemplate>
+                </StackLayout>
+            </rv:MaterialFrame>
+            <Label
+                Margin="0,20,0,0"
+                Style="{StaticResource Header}"
+                Text="Libraries Used" />
+            <rv:MaterialFrame
+                Padding="20"
+                CornerRadius="4"
+                HasShadow="True"
+                IsClippedToBounds="True"
+                MaterialTheme="Acrylic">
+                <StackLayout Spacing="20">
+                    <Label Text="Community Toolkit" />
+                    <Label Text="Pancake View" />
+                </StackLayout>
+            </rv:MaterialFrame>
+
+            <Label
+                Margin="0,20,0,0"
+                Style="{StaticResource Header}"
+                Text="About" />
+            <rv:MaterialFrame
+                Padding="20"
+                CornerRadius="4"
+                HasShadow="True"
+                IsClippedToBounds="True"
+                MaterialTheme="Acrylic">
+                <StackLayout Spacing="20">
+                    <Label Text="Github Repo" />
+                </StackLayout>
+            </rv:MaterialFrame>
         </StackLayout>
-        <ScrollView Grid.Row="1">
-            <StackLayout
-                Padding="16,40,16,40"
-                Orientation="Vertical"
-                Spacing="10">
-                <Label FontSize="22">
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <FormattedString.Spans>
-                                <Span
-                                    FontAttributes="Bold"
-                                    FontSize="22"
-                                    Text="AppName" />
-                                <Span Text=" " />
-                                <Span ForegroundColor="{StaticResource LightTextColor}" Text="1.0" />
-                            </FormattedString.Spans>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-                <Label>
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <FormattedString.Spans>
-                                <Span Text="This app is written in C# and native APIs using the" />
-                                <Span Text=" " />
-                                <Span FontAttributes="Bold" Text="Xamarin Platform" />
-                                <Span Text="." />
-                            </FormattedString.Spans>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-                <Label>
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <FormattedString.Spans>
-                                <Span Text="It shares code with its" />
-                                <Span Text=" " />
-                                <Span FontAttributes="Bold" Text="iOS, Android, and Windows" />
-                                <Span Text=" " />
-                                <Span Text="versions." />
-                            </FormattedString.Spans>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-                <Button
-                    Margin="0,10,0,0"
-                    BackgroundColor="{StaticResource Primary}"
-                    Command="{Binding OpenWebCommand}"
-                    Text="Learn more"
-                    TextColor="White" />
-            </StackLayout>
-        </ScrollView>
-    </Grid>
+
+    </ScrollView>
+
+
 
 </views:PageBase>
